2003/07/05 06:06 pcg

        * xs/GtkTextBuffer.xs, xs/GtkClipboard.xs: use length()
        syntax. Beat me if it doesn't work, I tested in with 5.8.0 and
        5.8.1-devel with no problems (and needed that change).

2003/07/04 16:31 muppetman

	* xs/GdkWindow.xs: added gdk_get_default_root_window

	* xs/PangoFont.xs: added PANGO_PIXELS

	* Gtk2.pm: bump version for release

2003/06/27 17:01 pcg

	* xs/GdkWindow.xs: gdk_window_set_back_pixmap allows null pixmap.

        * pm/Pango.pm: fix typo.

        * api.pod: small doc changes (basically proofreading for the new
        wrappers model).

2003/06/27 17:00 muppetman

	* Makefile.PL: require bleeding edge Glib.

	* gtk-demo/appwindow.pl, gtk-demo/item_factory.pl,
	gtk-demo/stock_browser.pl, testgtk.pl: remove bad usage of
	set_data and get_data

	* examples/histogramplot.pl: rewritten with new Glib::Object::Subclass
	features.

2003/06/26 14:49 rwmcfa1

	* MANIFEST, MANIFEST.SKIP: the manifest was updated to include a few
	missing files and a MANIFEST.SKIP file was added to simplify the
	process in the future.

	* Gtk2.pm: cleaned up some of the ItemFactory stuff esp. error messages

	* xs/GtkItemFactor.xs: reworked all of the callback stuff, needs 
	verification

	* examples/item_factory_demo.pl: added, simple exmaple of how to 
	use Gtk2::ItemFactory

2003/06/26 13:48 muppetman

	* pm/Pango.pm: new file allows you to import the Pango constants.

	* Gtk2.pm: allow 'use Gtk2 -init', a la gtk-perl; bumped version
	to 0.25 for CVS.

	* Makefile.PL: add Pango.pm and api.pod to install; install manpages.

	* gtk-demo/images.pl: use normal operators rather than ->eq (works on
	overloaded and persistent wrappers)

	* xs/GtkWidget.xs: support for requisitions as writable objects.
	needed for supporting size_request event.

	* xs/GtkStock.xs: watch out for NULLs in stock_item_to_hv; this fixes
	a crash that resulted whenever the stock browser wasn't the first
	thing opened in gtk-demo.

2003/06/26 01:11 pcg
