@@ -4,6 +4,17 @@
         syntax. Beat me if it doesn't work, I tested in with 5.8.0 and
         5.8.1-devel with no problems (and needed that change).
 
+        * xs/GtkTextBuffer.xs, xs/GtkRc.xs, xs/Gdk.xs, xs/GdkProperty.xs,
+        xs/GdkScreen.xs, xs/GtkAccelGroup.xs, xs/GtkEditable.xs,
+        xs/GtkFontSelection.xs, xs/GtkTextIter.xs: use gchar_own* as
+        result type to free the strings and avoid memleaks where no
+        CLEANUP existed.
+
+        * xs/GtkTextIter.xs: uncomment get_visible_slice and
+        get_visible_text.
+
+        * xs/GtkListItem.xs: fix #endif.
+
 2003/07/04 16:31 muppetman
 
 	* xs/GdkWindow.xs: added gdk_get_default_root_window
